[package]
name = "heart_mirror_brain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
rand = "0.9.2"
opus = "0.3.0"
whisper-rs = "0.15.1"
chrono = "0.4.42"
